Edit Design Button [Login] [GeneralInfo]

--- a/WPFClient/Views/UserControlGeneralInfo.xaml
+++ b/WPFClient/Views/UserControlGeneralInfo.xaml
@@ -46,10 +46,12 @@
             </Style.Triggers>
         </Style>
     </UserControl.Resources>
-    <DockPanel>
-        <DockPanel DockPanel.Dock="Top" Background="White" LastChildFill="False">
-            <Button DockPanel.Dock="Right" Width="50" Height="50" Command="{Binding GoToLogin}"></Button>
-        </DockPanel>
+    <DockPanel Background="White">
+        <Button DockPanel.Dock="Top" HorizontalAlignment="Right"
+                Width="50" Height="50"
+                Command="{Binding GoToLogin}">
+            <Image Source="/ResourceDictionaries/Image/Lock.png" Margin="5"/>
+        </Button>
         <Border>
             <DockPanel Background="DimGray">
                 <DockPanel DockPanel.Dock="Bottom" Height="60" Background="#FF303030">
@@ -86,8 +88,10 @@
                                 <TextBlock DockPanel.Dock="Bottom" Text="{Binding WorkShiftStatus}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </DockPanel>
                         </Border>
-                        <Button Command="{Binding OpenWorkShiftEmployeeCmd}" Content="Відкрити особисту зміну"/>
-                        <Button Command="{Binding CloseWorkShiftEmployeeCmd}" Content="Закрити особисту зміну"/>
+                        <Button Content="Відкрити особисту зміну"
+                                Command="{Binding OpenWorkShiftEmployeeCmd}"/>
+                        <Button Content="Закрити особисту зміну"
+                                Command="{Binding CloseWorkShiftEmployeeCmd}" />
                     </StackPanel>
                     <StackPanel Grid.Column="1">
                         <StackPanel Margin="3">
