--- a/WPFClient/Views/UserControlGeneralInfo.xaml
+++ b/WPFClient/Views/UserControlGeneralInfo.xaml
@@ -16,7 +16,7 @@
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="FontWeight" Value="DemiBold"/>
-            <Setter Property="DockPanel.Dock" Value="Top" />
+            <Setter Property="DockPanel.Dock" Value="Top"/>
         </Style>
         <Style TargetType="{x:Type Button}">
             <Setter Property="Background" Value="White"/>
@@ -30,8 +30,7 @@
                                 FontSize="15"
                                 Content="{TemplateBinding Content}"
                                 VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                               />
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"/>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
@@ -47,8 +46,7 @@
         </Style>
     </UserControl.Resources>
     <DockPanel Background="White">
-        <Button DockPanel.Dock="Top" HorizontalAlignment="Right"
-                Width="50" Height="50"
+        <Button DockPanel.Dock="Top" HorizontalAlignment="Right" Width="50" Height="50"
                 Command="{Binding GoToLogin}">
             <Image Source="/ResourceDictionaries/Image/Lock.png" Margin="5"/>
         </Button>
@@ -90,7 +88,7 @@
                         <Button Content="Відкрити особисту зміну"
                                 Command="{Binding OpenWorkShiftEmployeeCmd}"/>
                         <Button Content="Закрити особисту зміну"
-                                Command="{Binding CloseWorkShiftEmployeeCmd}" />
+                                Command="{Binding CloseWorkShiftEmployeeCmd}"/>
                     </StackPanel>
                     <StackPanel Grid.Column="1">
                         <StackPanel Margin="3">
