Changed Orders View. Only basyc view

--- a/WPFClient/Views/UserControlOrdersByAllTables.xaml
+++ b/WPFClient/Views/UserControlOrdersByAllTables.xaml
@@ -21,13 +21,13 @@
                         <Border Background="White">
                             <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" Text="{Binding WaiterOrders}"/>
                         </Border>
-                        <Button Style="{StaticResource ListBoxButton}" Grid.Column="1" Background="#FFD7D7D7" BorderBrush="Transparent" Padding="10,0,0,0" Height="60" Width="275"
-                     FontSize="16" VerticalAlignment="Bottom" Content="{Binding Name}" Command="{Binding LoadTablesCmd}" CommandParameter="{Binding Name}"/>
-                    </Grid>
+                        <TextBlock Grid.Column="1" Background="#FFD7D7D7"  Padding="10,0,0,0" Height="60" Width="275"
+                     FontSize="16" VerticalAlignment="Bottom" Text="{Binding Name}"></TextBlock>
+                        </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <ListBox Height="68" VerticalAlignment="Top" ItemsSource="{Binding Tables}" SelectedItem="{Binding SelectedTable}" Background="Transparent" BorderBrush="Transparent">
+        <!--<ListBox Height="68" VerticalAlignment="Top" ItemsSource="{Binding Tables}" SelectedItem="{Binding SelectedTable}" Background="Transparent" BorderBrush="Transparent">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal" />
@@ -38,6 +38,6 @@
                     <Button Content="{Binding Number}" Background="Green" Command="" Width="60" Height="60"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
-        </ListBox>
+        </ListBox>-->
     </DockPanel>
 </UserControl>
