--- a/WPFClient/Views/UserControlOrders.xaml
+++ b/WPFClient/Views/UserControlOrders.xaml
@@ -5,10 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPFClient.Views"
              xmlns:vm="clr-namespace:WPFClient.ViewModels"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:Ext="clr-namespace:Ext"
              d:DataContext="{d:DesignInstance Type=vm:VM_Orders}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName = "Loaded">
+            <i:InvokeCommandAction Command = "{Binding LoadAllDataCmd}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
     <DockPanel>
         <Border>
             <DockPanel>
@@ -24,7 +31,7 @@
                              <LineBreak/>
                              <Run FontSize="12" Text="{Binding WorkShiftStatus, Mode=OneWay}"/>
                              <LineBreak/>
-                             <Run FontSize="12" Text="Сума:"/><!--Binding до загальної суми всіх відкритих чеків-->
+                             <Run FontSize="12" Text="{Binding TotalAmmountOfCurrentEmployee, Mode=OneWay}"/>
                             </TextBlock>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Grid.Column="1" HorizontalAlignment="Right">
