--- a/WPFClient/Views/UserControlOrdersByHalls.xaml
+++ b/WPFClient/Views/UserControlOrdersByHalls.xaml
@@ -19,15 +19,15 @@
                             <ColumnDefinition Width="275"/>
                         </Grid.ColumnDefinitions>
                         <Border Background="White">
-                            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" Text="{Binding OccupiedTables}"/>
+                            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" Text="Кількість зайнятих столів"/>
                         </Border>
-                        <Button Style="{StaticResource ListBoxButton}" Grid.Column="1" Background="#FFD7D7D7" BorderBrush="Transparent" Padding="10,0,0,0" Height="60" Width="275"
-                                FontSize="16" VerticalAlignment="Bottom" Content="{Binding Name}" Command="{Binding LoadTablesByHallCmd}" CommandParameter="{Binding Name}"/>
+                        <TextBlock Grid.Column="1" Background="#FFD7D7D7"  Padding="10,0,0,0" Height="60" Width="275"
+                                FontSize="16" VerticalAlignment="Bottom" Text="{Binding Name}"></TextBlock>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <ListBox Height="68" VerticalAlignment="Top" ItemsSource="{Binding TablesByHall}" SelectedItem="{Binding SelectedTable}" Background="Transparent" BorderBrush="Transparent">
+        <ListBox Height="68" VerticalAlignment="Top" ItemsSource="{Binding SelectedHall.Tables}" SelectedItem="{Binding SelectedTable}" Background="Transparent" BorderBrush="Transparent">
             <ListBox.ItemsPanel>
                 <ItemsPanelTemplate>
                     <StackPanel Orientation="Horizontal" />
