--- a/WPFClient/Views/UserControlOrdersByAllTables.xaml
+++ b/WPFClient/Views/UserControlOrdersByAllTables.xaml
@@ -19,7 +19,7 @@
                             <ColumnDefinition Width="275"/>
                         </Grid.ColumnDefinitions>
                         <Border Background="White">
-                            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" Text="{Binding WaiterOrders}"/>
+                            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="12" Text="{Binding WorkShiftEmployees, Converter={StaticResource CountConverter}}"/>
                         </Border>
                         <TextBlock Grid.Column="1" Background="#FFD7D7D7"  Padding="10,0,0,0" Height="60" Width="275"
                      FontSize="16" VerticalAlignment="Bottom" Text="{Binding Name}"></TextBlock>
