Changed busines logic for view by Waiters, by Halls

--- a/WPFClient/ResourceDictionaries/Dictionary1.xaml
+++ b/WPFClient/ResourceDictionaries/Dictionary1.xaml
@@ -3,6 +3,8 @@
                      xmlns:help="clr-namespace:WPFClient.Help"
                     xmlns:Ext="clr-namespace:Ext">
     <help:ConverterFromCollectionToNumber x:Key="CountConverter" />
+    <help:OrderStatusToVisibilityConverter x:Key="OrderStatusToVisibilityConverter" />
+    <help:ConverterFromEmployeeToOrders x:Key="ConverterFromEmployeeToOrders" />
 
 
     <Style x:Key="ImageButton" TargetType="{x:Type Button}">
